--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
       <button>Continue</button>
     </section>
   </article>
-  <!--
+
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Your Name Here</a>.
-  </div> -->
+    Coded by <a href="https://github.com/maxnoelp" target="_blank">Max Nölp</a>.
+
 
 </body>
 
